:bug:Fix hamburger menu
The hamburger menu was not responsive, you click on it and it didn't do anything
This was because I forgot to add the bootstrap JS files to the pipeline nor
had I included jquery (a dependancy of bootstrap).

This change set adds the required JS files to the pipeline so that the hamburger
menu actually works.

Also it updates the colour of the hamburger menu so that the bars are visible
on the dark background.

--- a/src/app/layout/nav/nav.component.css
+++ b/src/app/layout/nav/nav.component.css
@@ -14,3 +14,8 @@
 .navbar-text {
   margin-top: 0;
 }
+
+.fa-bars {
+  color: #9d9d9d;
+  font-size: 2em;
+}
